Fix lorem ipsum white space

--- a/src/renderer/app.component.scss
+++ b/src/renderer/app.component.scss
@@ -72,4 +72,5 @@ a:hover {
 .test-panel {
   margin: 0.5em;
   overflow-y: auto;
+  white-space: pre-wrap;
 }
